<resources>
    <string name="app_name" translatable="false">HBLIK</string>
    <string name="my_activity">My Activity</string>
    <string name="question_stats">Question Stats</string>
    <string name="email_verification">Email Verification</string>
    <string name="create_question">Create a new question</string>

<string name="rate_us_message">Did you like our app ?\nGive us 5 stars now</string>
    <string name="sign_up">Sign-Up</string>
    <string name="sign_in">Sign-In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="birthday">Birth date</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="choose_photo">Set profile photo</string>
    <string name="submit">Submit</string>
    <string name="score">Score : %d</string>
    <string name="score_home">  %d</string>
    <string name="number_answers">Number of answers : %s</string>
    <string name="ask_question">Ask a question</string>
    <string name="option1">option 1 *</string>
    <string name="option2">option 2 *</string>
    <string name="option3">option 3</string>
    <string name="option4">option 4</string>
    <string name="option5">option 5</string>
    <string name="number_wanted">Number of answers</string>
    <string name="number">Number</string>

    <string name="text_help">

        <b>ANSWER</b>\n\n
    In order to get more score, you have to answer questions.
        The questions are multiple choice in the limit of five choices.
        You get 5 points for every answer.\n\n
        <b>ASK</b>\n\n
        After answering enough questions, you will be able to ask too.
        In order to ask, you should have at least 25 points.
        The points you will need for each question depend on two parameters : \n\n
        <ul><b>The number of answers you want to get on this question</b>. Every single answer you want to get is for <b>5</b> points</ul>\n\n
        <ul><b>the number of options or choices</b>. The two first choices are for 20 points because two choices is the minimum.
            Every extra choice for your question is for <b>20</b> points with a max of five choices.</ul>\n\n

        <b>STATS</b>\n\n
        You can find every question you asked in the section of questions stats
        with information like how many people answered your question and
        the percentage of people who chose each option or choice.
        The maximum of answers you will get is the number precised while creating the question.\n\n

    </string>


    <string name="name">%s %s</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_share">Share</string>
    <string name="go">GO</string>

    <string name="notification5">To unlock one more option, you should have at least 85 points</string>
    <string name="notification4">To unlock one more option, you should have at least 65 points</string>
    <string name="notification3">To unlock one more option, you should have at least 45 points</string>
    <string name="notificationS">Each answer is for 5 points</string>
    <string name="notification0">GO</string>
    <string name="facebook_app_id">2251794794949582</string>
    <string name="fb_login_protocol_scheme">fb2251794794949582</string>
    <string name="email_sent">An email has been sent to you.\nPlease check your email box to verify tour email</string>
    <string name="goto_help"><u>see help</u></string>

    <string name="ask">Ask</string>
    <string name="answer">Answer</string>
    <string name="myq">My questions</string>
    <string name="stats">My stats</string>
    <string name="exit">Log out</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="report">Report</string>
    <string name="rate">Rate us</string>
    <string name="change_pass">Change your password</string>
    <string name="current_pass">enter your current password :</string>
    <string name="new_pass">enter the new password :</string>
    <string name="new_photo">choose a new profile photo</string>
    <string name="save_changes">save changes</string>
    <string name="change_photo">change profile photo</string>
    <string name="send_again_verification_email" >didn\'t receive verification email yet ?\n <u>Send another email</u></string>

    <string-array name="days_array">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="months_array">
        <item name='january'>January</item>
        <item name='february'>February</item>
        <item name='march'>March</item>
        <item name='april'>April</item>
        <item name='may'>May</item>
        <item name='june'>June</item>
        <item name='july'>July</item>
        <item name='august'>August</item>
        <item name='september'>September</item>
        <item name='october'>October</item>
        <item name='november'>November</item>
        <item name='december'>December</item>
    </string-array>

    <string-array name="years_array">
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
        <item>1970</item>
        <item>1969</item>
        <item>1968</item>
        <item>1967</item>
        <item>1966</item>
        <item>1965</item>
        <item>1964</item>
        <item>1963</item>
        <item>1962</item>
        <item>1961</item>
        <item>1960</item>
        <item>1959</item>
        <item>1958</item>
        <item>1957</item>
        <item>1956</item>
        <item>1955</item>
        <item>1954</item>
        <item>1953</item>
        <item>1952</item>
        <item>1951</item>
        <item>1950</item>
        <item>1949</item>
        <item>1948</item>
        <item>1947</item>
        <item>1946</item>
        <item>1945</item>
        <item>1944</item>
        <item>1943</item>
        <item>1942</item>
        <item>1941</item>
        <item>1940</item>
        <item>1939</item>
        <item>1938</item>
        <item>1937</item>
        <item>1936</item>
        <item>1935</item>
        <item>1934</item>
        <item>1933</item>
        <item>1932</item>
        <item>1931</item>
        <item>1930</item>
        <item>1929</item>
        <item>1928</item>
        <item>1927</item>
        <item>1926</item>
        <item>1925</item>
        <item>1924</item>
        <item>1923</item>
        <item>1922</item>
        <item>1921</item>
        <item>1920</item>
        <item>1919</item>
        <item>1918</item>
        <item>1917</item>
        <item>1916</item>
        <item>1915</item>
        <item>1914</item>
        <item>1913</item>
        <item>1912</item>
        <item>1911</item>
        <item>1910</item>
        <item>1909</item>
        <item>1908</item>
        <item>1907</item>
        <item>1906</item>
        <item>1905</item>

    </string-array>
</resources>


