<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">




    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_ic"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help_ic"
            android:title="@string/help" />
       

    </group>


        <group>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_rate_us"
                android:icon="@drawable/rate_ic"
                android:title="Rate Us" />
        </group>

    <item
        android:id="@+id/nav_log_out"
        android:icon="@drawable/logout_ic_big"
        android:title="@string/exit" />

</menu>
