<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".SettingsActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ScrollView
        android:paddingTop="40dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingBottom="10dp"
        android:text="@string/change_pass"
        android:background="@drawable/underscore"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_pass"
        android:paddingTop="20dp"
        android:paddingStart="25dp"
        android:paddingBottom="10dp"
        android:textSize="15sp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/curr_pass"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_pass"
        android:paddingTop="20dp"
        android:paddingStart="25dp"
        android:paddingBottom="10dp"
        android:textSize="15sp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/new_pass"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:paddingTop="10dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"/>



    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:background="@drawable/button_background"/>

    <ProgressBar
        android:id="@+id/progress_settings"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    </LinearLayout>

</ScrollView>
</LinearLayout>