<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Register2Activity"
    android:paddingTop="100dp"
    android:paddingEnd="50dp"
    android:paddingStart="50dp">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logofregister"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textColor="@color/app_color"
        android:paddingBottom="40dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailR"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:errorEnabled="true"
        android:textColorHint="@color/app_color_light">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColor="@color/app_color"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordR"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        android:textColorHint="@color/app_color_light"


        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="@color/app_color"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordConfirm"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        android:textColorHint="@color/app_color_light"
        android:paddingBottom="20dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pcEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:textColor="@color/app_color"/>

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="50dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingEnd="50dp"
            android:text="@string/choose_photo"
            android:textColor="@color/app_color_light" />

        <ImageView
            android:id="@+id/chooseProfilePhotoB"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/attach_ic" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePhotoRegister"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backToPrincipal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="back"

            />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/gotoQuestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            />
    </LinearLayout>


</LinearLayout>